--- a/src/home.html
+++ b/src/home.html
@@ -6,7 +6,7 @@
 
     <title>Felipe Vargas</title>
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
+    <link href="/dist/main.css" rel="stylesheet">
   </head>
   <body>
   </body>
