--- a/src/home.html
+++ b/src/home.html
@@ -9,5 +9,12 @@
     <link href="/dist/main.css" rel="stylesheet">
   </head>
   <body>
+    <main>
+      <header>Hi! My name is Felipe Vargas</header>
+      <div class="description">
+        I am a software engineer and I study Cognitive Science and Computer
+        Science at Carnegie Mellon University
+      </div>
+    </main>
   </body>
 </html>
