Remove dist/ from gitignore and compress css

--- a/src/home.html
+++ b/src/home.html
@@ -6,7 +6,7 @@
 
     <title>Felipe Vargas</title>
 
-    <link href="/dist/main.css" rel="stylesheet">
+    <link href="/dist/main.min.css" rel="stylesheet">
   </head>
   <body>
     <main>
