--- a/src/home.html
+++ b/src/home.html
@@ -6,6 +6,7 @@
 
     <title>Felipe Vargas</title>
 
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/dist/main.min.css" rel="stylesheet">
   </head>
   <body>
@@ -15,6 +16,11 @@
         I am a software engineer and I study Cognitive Science and Computer
         Science at Carnegie Mellon University
       </div>
+      <footer>
+        <a href="https://stackoverflow.com/users/1562138/fvgs" target="_blank" rel="noopener noreferrer"><i class="fa fa-stack-overflow"></i></a>
+        <a href="https://github.com/fvgs" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
+        <i class="fa fa-envelope"></i>
+      </footer>
     </main>
   </body>
 </html>
