Add animations and improve build workflow

--- a/src/home.html
+++ b/src/home.html
@@ -8,19 +8,21 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="/dist/main.min.css" rel="stylesheet">
+
+    <script src="/dist/main.js" async defer></script>
   </head>
   <body>
     <main>
-      <header>Hi! My name is Felipe Vargas</header>
-      <div class="description">
+      <div class="intro animated fadeIn">Hi! My name is Felipe Vargas</div>
+      <div class="bio animated fadeIn">
         I am a software engineer and I study Cognitive Science and Computer
         Science at Carnegie Mellon University
       </div>
-      <footer>
+      <div class="icons animated fadeIn">
         <a href="https://stackoverflow.com/users/1562138/fvgs" target="_blank" rel="noopener noreferrer"><i class="fa fa-stack-overflow"></i></a>
         <a href="https://github.com/fvgs" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
         <i class="fa fa-envelope"></i>
-      </footer>
+      </div>
     </main>
   </body>
 </html>
