--- a/src/home.html
+++ b/src/home.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <main>
-      <div class="intro animated fadeIn">Hi! My name is Felipe Vargas</div>
+      <div class="intro animated fadeIn">Hi! My name is Felipe&nbsp;Vargas</div>
       <div class="bio animated fadeIn">
         I am a software engineer and I study Cognitive Science and Computer
         Science at Carnegie Mellon University
