Change Stack Overflow link destination tab

--- a/src/home.html
+++ b/src/home.html
@@ -20,7 +20,7 @@
         Science at Carnegie Mellon University
       </div>
       <div class="icons animated fadeIn">
-        <a href="https://stackoverflow.com/users/1562138/fvgs" target="_blank" rel="noopener noreferrer"><i class="fa fa-stack-overflow"></i></a>
+        <a href="https://stackoverflow.com/users/1562138/fvgs?tab=topactivity" target="_blank" rel="noopener noreferrer"><i class="fa fa-stack-overflow"></i></a>
         <a href="https://github.com/fvgs" target="_blank" rel="noopener noreferrer"><i class="fa fa-github"></i></a>
         <i class="fa fa-envelope"></i>
       </div>
