--- a/src/home.html
+++ b/src/home.html
@@ -16,7 +16,7 @@
     <main>
       <div class="intro animated fadeIn">Hi! My name is Felipe&nbsp;Vargas</div>
       <div class="bio animated fadeIn">
-        I am a software engineer and I study Cognitive Science and Computer
+        I am a software engineer and I studied Cognitive Science and Computer
         Science at Carnegie Mellon University
       </div>
       <div class="icons animated fadeIn">
